--- a/RoR/app/views/productos/index.html.erb
+++ b/RoR/app/views/productos/index.html.erb
@@ -21,5 +21,14 @@
 </table>
 
 <br>
+<div class="col-xs-12"> 
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+      Dar de alta producto
+  </button>
+</div>
+
+<%= render 'form' %>
+
 
 <%= link_to 'New Producto', new_producto_path %>
