--- a/RoR/app/assets/stylesheets/application.css
+++ b/RoR/app/assets/stylesheets/application.css
@@ -14,6 +14,8 @@
  *= require bootstrap-theme.min
  *= require bootstrap.min
  *= require AdminLTE.min
+ *= require font-awesome.min
+ *= require _all-skins.min.css
  *= require skin-blue.min
  *= require_tree .
  */
