--- a/RoR/app/views/empresas/new.html.erb
+++ b/RoR/app/views/empresas/new.html.erb
@@ -1,1 +1,33 @@
-new.html.erb
+<div class="col-md-6 col-md-offset-3">
+  <div class="box box-danger">
+    <div class="box-header with-border">
+      <h3 class="box-title">Dar de Alta Empresa</h3>
+    </div><!-- /.box-header -->
+    <!-- form start -->
+    <%= form_for @empresa, :html => {:class => "form-horizontal"} do |f| %>
+      <div class="box-body">
+        <div class="form-group">
+          <%= f.label :nombre,"Nombre", :class => "col-sm-2 control-label" %>
+          <div class="col-sm-10">
+            <%= f.text_field :nombre, :class => "form-control" %>
+          </div>
+        </div>                    
+        <div class="form-group">
+          <%= f.label :descripcion, "Descripción", :class => "col-sm-2 control-label" %>
+          <div class="col-sm-10">
+            <%= f.text_area :descripcion, :class => "form-control" %>
+          </div>
+        </div>
+        <div class="form-group">
+          <%= f.label :direccion, "Dirección",:class=> "col-sm-2 control-label" %>
+          <div class="col-sm-10">
+            <%= f.text_field :direccion, :class => "form-control" %>
+          </div>
+        </div>   
+      </div><!-- box-body -->
+      <div class="box-footer">
+          <%= f.submit "Crear",:class => "btn btn-info pull-right" %>
+      </div><!-- /.box-footer -->             
+    <% end %>                
+  </div><!-- /.box -->
+</div>
